--- a/.gitignore/config.json
+++ b/.gitignore/config.json
@@ -1,6 +1,6 @@
 {
 
-    "token": "NjIwMTYzMTEwMzcxNzIxMjE2.XXSx5w.Ain2Fglmln5sj6gMmiJW_rhXgfQ",
+    "token": "",
     "prefix": "s!",
     "db": {
         "client": "sqlite3",
